--- a/views/inventory/classification.ejs
+++ b/views/inventory/classification.ejs
@@ -1,12 +1,14 @@
 <% // Block: 3 Sections - Content Heading, Message, Inventory items display %>
 
 <div class="title-container">
-  <% if (title) { %>
-      <div class="content__heading"><h1><%= title %></h1></div>
-      <%- messages() %>
-      <% } else {
-          res.redirect('/')
-      } %>
+    <% if (title) { %>
+        <div class="content__heading"><h1><%= title %></h1></div>
+        <%# if (someCondition) { %>
+            <%# messages() %>
+        <%# } %>
+        <% } else {
+            res.redirect('/')
+        } %>
 </div>
 
 <% // Block: Message %>
