--- a/views/account/account-management.ejs
+++ b/views/account/account-management.ejs
@@ -1,7 +1,9 @@
 <div class="title-container">
     <% if (title) { %>
         <div class="content__heading"><h1><%= title %></h1></div>
-        <%- messages() %>
+        <%# if (someCondition) { %>
+            <%# messages() %>
+        <%# } %>
         <% } else {
             res.redirect('/')
         } %>
