--- a/views/inventory/inventory-management.ejs
+++ b/views/inventory/inventory-management.ejs
@@ -5,7 +5,9 @@
 <div class="title-container">
     <% if (title) { %>
         <div class="content__heading"><h1><%= title %></h1></div>
-        <%- messages() %>
+        <%# if (someCondition) { %>
+            <%# messages() %>
+        <%# } %>
         <% } else {
             res.redirect('/')
         } %>
