--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,7 +4,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title> <%- title %> | CSE 340 App </title>
     <link rel="stylesheet" href="/css/style.css" media="screen"> <!-- Main style sheet -->
-    <link rel="stylesheet" href="/css/small.css" media="screen and (max-width: 767px)">
+    <link rel="stylesheet" href="/css/home.css" media="screen">
+    <link rel="stylesheet" href="/css/classification.css" media="screen">
+    <link rel="stylesheet" href="/css/detail.css" media="screen">
+    <link rel="stylesheet" href="/css/form.css" media="screen">
+    <!--<link rel="stylesheet" href="/css/small.css" media="screen and (max-width: 767px)">
     <link rel="stylesheet" href="/css/medium.css" media="screen and (min-width: 768px) and (max-width: 1023px)">
-    <link rel="stylesheet" href="/css/large.css" media="screen and (min-width: 1024px)">
+    <link rel="stylesheet" href="/css/large.css" media="screen and (min-width: 1024px)">-->
 </head>
