--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -78,7 +78,12 @@
                             required 
                             pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$"
                             >
-                        <span class="form__hint">Passwords must be at least 12 characters, contain at least 1 number, 1 capital letter, and 1 special character</span>
+                        <span class="form__hint">
+                            Passwords Requirement: <br>
+                            - At least 12 characters <br>
+                            - Contain at least 1 number <br>
+                            - Contain 1 capital letter <br> 
+                            - Contain 1 special character</span>
                     </div>
                 </fieldset>
     
