--- a/views/account/account-management.ejs
+++ b/views/account/account-management.ejs
@@ -11,34 +11,35 @@
 
 <div class="accountManagement-container">
     <% let account = locals.accountData %>
+
     <% if (locals.loggedIn) { %>
     <h2 class="account-management-welcome">Welcome <%= account.account_firstname %>!</h2>
-    
+
     <h3 class="account-management-title">Account Management</h3>
     <div class="accountmanagement-links">
         <a href="/account/edit/<%= account.account_id %>">Modify Your Account Information</a>
     </div>
-    
+
     <% if (account.account_type == "Employee" || account.account_type == "Admin") { %>
         <h3 class="account-management-title">Inventory Management</h3>
         <div class="accountmanagement-links">
-        <a href="/inv/">Manage inventory</a>
+            <a href="/inv/">Manage Inventory</a>
         </div>
     <% } %>
 
     <!-- Assignment 6 -->
-    <% if (account.account_type == "Mechanic") { %>
+    <% if (account.account_type === "Employee" && account.account_id === 2) { %>
         <h3 class="account-management-title">Manage Maintenance History</h3>
         <div class="accountmanagement-links">
-            <a href="/maintenance/">Maintenance History</a>
-            
-            <a href="/maintenance/viewById/<%= maintenance.maintenance_history_id %>">View a Record</a>
-            <a href="/maintenance/viewAll/">View all Records</a>
-            <a href="/maintenance/add/">Add a Record</a>
-            <a href="/maintenance/edit/">Add a Record</a>
-            <a href="/maintenance/remove/">Remove a Record</a>
+            <div class="record-link-container">
+                <a href="/maintenance/">Manage Records</a>
+            </div>
         </div>
     <% } %>
+<% } %>
 
-    <% } %>
 </div>
+
+<noscript>JavaScript must be enabled to use this page.</noscript>
+
+<script src="../../js/maintenance.js"></script>
