--- a/views/inventory/edit-inventory.ejs
+++ b/views/inventory/edit-inventory.ejs
@@ -1,7 +1,7 @@
 <div class="title-container">
     <% if (title) { %>
         <div class="content__heading"><h1><%= title %></h1></div>
-        <%- messages() %>
+        <%# messages() %>
         <% } else {
             res.redirect('/')
         } %>
